# tsp_solver

./: .gitignore  Cargo.toml  readme.md
datasets/: optimal solution finder.ipynb
datasets/argentina/: argentina.json
datasets/att48/: att48.json  note.txt
datasets/demo/: dataset.json  demo.json
src/: dataset.rs  generation.rs  individual.rs  main.rs  points_dataset.rs  solution.rs  utils.rs
src/stats/: stats.css  stats.html
