[package]
name = "tsp_solver"
version = "0.3.2"
authors = ["Ferdinand Keller <ferdinand.keller@edu.devinci.fr>"]
edition = "2021"
description = "This program will try to find good solutions to the traveling salesman problem using genetic algorithms."
license = "MIT"
keywords = ["GA", "genetic algorithm", "TSP", "traveling salesman problem"]

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thousands = "0.2.0"
clap = { version = "3.1.6", features = ["derive"] }